--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   "search.exclude": {
     "**/node_modules": true,
     "**/bower_components": true,
-    "**/.sfdx": true
-  }
+    "**/.sfdx": true,
+  },
 }
